--- a/my-mill.ini
+++ b/my-mill.ini
@@ -8,7 +8,8 @@ DEBUG = 1
 VERSION = 1.0
 
 [DISPLAY]
-DISPLAY = linuxcncwebsock 
+DISPLAY = linuxcncwebsock --port 5007 --name EtherCat-Plot --connectpw nxp --enablepw nxp --path ./gcode/
+#DISPLAY = linuxcncrsh --port 5007 --name EtherCat-Plot --connectpw nxp --enablepw nxp --path ./gcode/
 
 [KINS]
 JOINTS = 3
