--- a/my-mill.ini
+++ b/my-mill.ini
@@ -4,16 +4,17 @@
 
 [EMC]
 MACHINE = my-mill
-DEBUG = 1
+DEBUG = 0
 VERSION = 1.0
 
 [DISPLAY]
-DISPLAY = linuxcncwebsock --port 5007 --name EtherCat-Plot --connectpw nxp --enablepw nxp --path ./gcode/
+#DISPLAY = linuxcncwebsock --port 5007 --name EtherCat-Plot --connectpw nxp --enablepw nxp --path ./gcode/
 #DISPLAY = linuxcncrsh --port 5007 --name EtherCat-Plot --connectpw nxp --enablepw nxp --path ./gcode/
+DISPLAY = ./uarm_display.py 
 
 [KINS]
-JOINTS = 3
-KINEMATICS = trivkins coordinates=XYZ
+JOINTS = 6
+KINEMATICS = uarmkins_3d
 
 [FILTER]
 PROGRAM_EXTENSION = .py Python Script
@@ -22,91 +23,155 @@ py = python
 
 [TASK]
 TASK = milltask
-CYCLE_TIME = 0.15
+CYCLE_TIME = 0.2
 
 [RS274NGC]
 PARAMETER_FILE = linuxcnc.var
+SUBROUTINE_PATH=/root/work/ethercat-tsn/linuxcnc/nc_files/
+REMAP=G16 modalgroup=1 argspec=Rf ngc=g16
+
 
 [EMCMOT]
 EMCMOT = motmod
 COMM_TIMEOUT = 1.0
-BASE_PERIOD =  200000
-SERVO_PERIOD = 400000
+BASE_PERIOD =  300000
+SERVO_PERIOD = 500000
 
 [HAL]
 HALFILE = my-mill.hal
-
+HALUI = halui
+POSTGUI_HALFILE = postgui.hal
 [TRAJ]
 COORDINATES =  X Y Z
 LINEAR_UNITS = mm
 ANGULAR_UNITS = degree
 DEFAULT_LINEAR_VELOCITY = 180.0
 MAX_LINEAR_VELOCITY = 200.00
+NO_FORCE_HOMING = 1
 
 [EMCIO]
 EMCIO = io
 CYCLE_TIME = 0.100
 TOOL_TABLE = tool.tbl
 
-[AXIS_X]
-MAX_VELOCITY = 200.0
-MAX_ACCELERATION = 400.0
-MIN_LIMIT = -1
-MAX_LIMIT = 300.0
 
-[JOINT_0]
-TYPE = LINEAR
-HOME = 0.0
-MIN_LIMIT = -1
-MAX_LIMIT = 300.0
-MAX_VELOCITY = 200.0
-MAX_ACCELERATION = 400.0
-STEPGEN_MAXACCEL = 2500
-SCALE = 12.5
-FERROR = 1
-MIN_FERROR = .25
-HOME_OFFSET = 2.000000
-HOME_SEARCH_VEL = -50
-HOME_LATCH_VEL = -20.00000
-HOME_FINAL_VEL= 20
-HOME_IGNORE_LIMITS = YES
+[AXIS_X]
+MAX_VELOCITY = 60.0
+MAX_ACCELERATION = 2000.0
+MIN_LIMIT = 0
+MAX_LIMIT = 400
 
 [AXIS_Y]
-MAX_VELOCITY = 400
-MAX_ACCELERATION = 200.0
-MIN_LIMIT = -1
-MAX_LIMIT = 200.0
-
-[JOINT_1]
-TYPE = LINEAR
-HOME = 0.0
-MIN_LIMIT = -1
-MAX_LIMIT = 200.0
-MAX_VELOCITY = 400.0
-MAX_ACCELERATION = 200
-STEPGEN_MAXACCEL = 2500
-SCALE = 12.5
-FERROR = 1
-MIN_FERROR = .25
-HOME_OFFSET = 200
-HOME_SEARCH_VEL =50
-HOME_LATCH_VEL = -20.00000
-HOME_FINAL_VEL=50
-HOME_IGNORE_LIMITS = YES
+MAX_VELOCITY = 60.0
+MAX_ACCELERATION = 6000.0
+MIN_LIMIT = -400
+MAX_LIMIT = 400
 
 [AXIS_Z]
-MAX_VELOCITY = 10
-MAX_ACCELERATION = 8.0
-MIN_LIMIT = -20
-MAX_LIMIT = 30
+MAX_VELOCITY = 60.0
+MAX_ACCELERATION = 6000.0
+MIN_LIMIT = -400
+MAX_LIMIT = 400.0
+
+[AXIS_A]
+MAX_VELOCITY = 30.0
+MAX_ACCELERATION = 200.0
+MIN_LIMIT = -360.0
+MAX_LIMIT = 360.0
+
+[AXIS_B]
+MAX_VELOCITY = 60.0
+MAX_ACCELERATION = 6000.0
+MIN_LIMIT = -360.0
+MAX_LIMIT = 360.0
+
+[AXIS_C]
+MAX_VELOCITY = 60.0
+MAX_ACCELERATION = 6000.0
+MIN_LIMIT = -180.0
+MAX_LIMIT = 120.0
+[JOINT_0]
+TYPE = ANGULAR
+HOME = 0.000
+MAX_VELOCITY = 60.0
+MAX_ACCELERATION = 2000.0
+MIN_LIMIT = -180.0
+MAX_LIMIT = 180.0
+STEPGEN_MAXACCEL = 1500
+SCALE = 20
+HOME_OFFSET = 0.0
+HOME_SEARCH_VEL = 0.0
+HOME_LATCH_VEL = 0.0
+HOME_SEQUENCE = 0
+
+[JOINT_1]
+TYPE = ANGULAR
+HOME = 100.000
+MAX_VELOCITY = 20.0
+MAX_ACCELERATION = 600.0
+MIN_LIMIT = -90.0
+MAX_LIMIT = 135.1
+STEPGEN_MAXACCEL = 2500
+SCALE = 20
+#HOME_OFFSET = 133.41793005502433
+HOME_OFFSET = 130
+HOME_SEARCH_VEL = 0.0
+HOME_LATCH_VEL = 0.0
+HOME_SEQUENCE = 0
 
 [JOINT_2]
-TYPE = LINEAR
-MIN_LIMIT = -20
-MAX_LIMIT = 30
-MAX_VELOCITY = 10
-MAX_ACCELERATION = 8.0
-STEPGEN_MAXACCEL = 15
-SCALE = 1
-FERROR = 1
-MIN_FERROR = .25
+TYPE = ANGULAR
+HOME = -42.743592702040374
+MAX_VELOCITY = 60.0
+MAX_ACCELERATION = 6000.0
+MIN_LIMIT = -180
+MAX_LIMIT = 180.0
+STEPGEN_MAXACCEL = 6000
+SCALE = 20
+HOME_OFFSET = -42.743
+HOME_SEARCH_VEL = 0.0
+HOME_LATCH_VEL = 0.0
+HOME_SEQUENCE = 0
+
+[JOINT_3]
+TYPE = ANGULAR
+HOME = 0.000
+MAX_VELOCITY = 60.0
+MAX_ACCELERATION = 6000.0
+MIN_LIMIT = -360.0
+MAX_LIMIT = 360.0
+STEPGEN_MAXACCEL = 2500
+SCALE = 17.77777777777778
+HOME_OFFSET = 0.0
+HOME_SEARCH_VEL = 0.0
+HOME_LATCH_VEL = 0.0
+HOME_SEQUENCE = 0
+
+[JOINT_4]
+TYPE = ANGULAR
+HOME = 0.000
+MAX_VELOCITY = 30.0
+MAX_ACCELERATION = 200.0
+MIN_LIMIT = -360.0
+MAX_LIMIT = 360.0
+STEPGEN_MAXACCEL = 2500
+SCALE = 17.77777777777778
+HOME_OFFSET = 0.0
+HOME_SEARCH_VEL = 0.0
+HOME_LATCH_VEL = 0.0
+HOME_SEQUENCE = 0
+
+[JOINT_5]
+TYPE = ANGULAR
+HOME = 0.000
+MAX_VELOCITY = 300.0
+MAX_ACCELERATION = 6000.0
+MIN_LIMIT = -180.0
+MAX_LIMIT = 120.0
+STEPGEN_MAXACCEL = 6000
+SCALE = 4.444444444444445
+HOME_OFFSET = 0.0
+HOME_SEARCH_VEL = 0.0
+HOME_LATCH_VEL = 0.0
+HOME_SEQUENCE = 0
+
